@@ -1,6 +1,8 @@
 - Fix x86-32 compilation error and improve detection of AES-NI for x86
   processors (Jeremie Dimino, Etienne Millon)
   (Closes: #1646)
+- AES-NI: align key_schedule on a 16 byte boundary (Etienne Millon)
+  (Closes: #1709)
 
 Release 1.11:
 - Adapt to "safe string" mode (OCaml 4.02 and later required).
